--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.3",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "bootbox": "^5.5.2",
     "bootstrap": "^4.5.3",
+    "bootstrap-select": "^1.13.18",
+    "jwt-decode": "^3.1.2",
+    "ng-multiselect-dropdown": "^0.2.14",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
