--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "bootbox": "^5.5.2",
     "bootstrap": "^4.5.3",
     "bootstrap-select": "^1.13.18",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.0",
     "jwt-decode": "^3.1.2",
     "ng-multiselect-dropdown": "^0.2.14",
+    "ng2-pdf-viewer": "^6.3.2",
+    "pdfmake": "^0.1.70",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
